2013-02-19 Wolfgang Hofer <hof@gimp.org>

- storyboard debug features now support logging to file.
  This can be optionally configured in the file "GAP_DEBUG_STORYBOARD"  (located in gimpdir)
  by adding a line like this:
    logfile=/tmp/GAP_STORYBOARD_DEBUG.log  

  or like that (on Windows):
    logfile=S:\SsdShare\GAP_STORYBOARD_DEBUG.log
  
  Note that logging to stdout is default, in case no logfile is specified.
  (the filename must start immediate after the = character,
   blanks in the logfilename/path are not supported !)

  This feature was added for analyse of Storyboard bugs in Windows environment.

- bugfix creation of storyboard from video extract plug-in.
  A broken storyboard was created (with section list NULL)
  


  * gap/gap_story_dialog.c
  * gap/gap_story_file.c [.h]
  * gap/gap_story_undo.c [.h]
  * gap/gap_story_vthumb.c [.h]
  
  * gap/gap_vex_dialog.c
  * gap/gap_vex_exec.c

2013-02-10 Wolfgang Hofer <hof@gimp.org>

- added audio support for other Operating Systems than Linux.
  Audio playback now can be configured to use an SDL media library based
  audio playback module (as alternative to the already existing
  wavplay client/server based audio playback).

  The configure option --disable-audio-support was removed and
  replaced by the new options: 

     --disable-audio-support-sdl
     --disable-audio-support-wavplay  

  on Linux
    enable-audio-support-sdl is default
    enable-audio-support-wavplay  is fallback (when SDL library is not installed)

  on Windows
    enable-audio-support-sdl is default,
    
    NO audio playback possible when SDL library  library is not installed)
    

  The SDL library is available for Linux, Windows and MacOS


    * configure.in
    * Makefile.am
    * gap/Makefile.am
    * gap/gap_apcl_lib.h              #new file
    * gap/gap_sdl_audioplayer.c [.h]  #new files
    * gap/gap_player_dialog.c

2013-01-16 Wolfgang Hofer <hof@gimp.org>
